Add X-Total-Count header for React Admin
